fix: explicit Vercel build config and static output

--- a/app.json
+++ b/app.json
@@ -23,7 +23,8 @@
             "package": "com.lucas.vitus"
         },
         "web": {
-            "favicon": "./assets/favicon.png"
+            "favicon": "./assets/favicon.png",
+            "output": "static"
         },
         "plugins": [
             [
