fix: refine build command and add SPA rewrites for Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
     "framework": "expo",
-    "outputDirectory": "dist"
+    "outputDirectory": "dist",
+    "rewrites": [
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
+        }
+    ]
 }
