--- a/package.json
+++ b/package.json
@@ -40,5 +40,10 @@
     "@types/react": "~19.0.0",
     "typescript": "^5.7.0"
   },
-  "private": true
+  "private": true,
+  "overrides": {
+    "react-native": "0.81.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
+  }
 }
