--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,6 @@
 {
     "outputDirectory": "dist",
+    "installCommand": "npm install --legacy-peer-deps",
     "rewrites": [
         {
             "source": "/(.*)",
