--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "expo-splash-screen": "~31.0.0",
     "expo-status-bar": "~3.0.0",
     "react": "19.1.0",
-    "react-dom": "^19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.0",
     "react-native-safe-area-context": "5.6.2",
     "react-native-screens": "~4.6.0",
