--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "expo-asset": "~12.0.0",
     "expo-camera": "~17.0.0",
     "expo-constants": "~18.0.0",
+    "expo-file-system": "^19.0.21",
     "expo-font": "~14.0.0",
     "expo-linking": "~8.0.0",
     "expo-notifications": "~0.32.0",
+    "expo-print": "^15.0.8",
+    "expo-sharing": "^14.0.8",
     "expo-splash-screen": "~31.0.0",
     "expo-status-bar": "~3.0.0",
     "react": "19.1.0",
