feat: New visual identity 'Natureza Viva 2.0' and Login Screen refinements

--- a/app.json
+++ b/app.json
@@ -10,7 +10,7 @@
         "splash": {
             "image": "./assets/splash-icon.png",
             "resizeMode": "contain",
-            "backgroundColor": "#FFFFFF"
+            "backgroundColor": "#06815B"
         },
         "ios": {
             "supportsTablet": true
