--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-constants": "~18.0.0",
     "expo-file-system": "^19.0.21",
     "expo-font": "~14.0.0",
+    "expo-image-picker": "~17.0.10",
     "expo-linking": "~8.0.0",
     "expo-notifications": "~0.32.0",
     "expo-print": "^15.0.8",
