fix: Robust camera initialization and permission handling for Android/iOS

--- a/app.json
+++ b/app.json
@@ -20,7 +20,10 @@
                 "foregroundImage": "./assets/adaptive-icon.png",
                 "backgroundColor": "#FFFFFF"
             },
-            "package": "com.lucas.vitus"
+            "package": "com.lucas.vitus",
+            "permissions": [
+                "CAMERA"
+            ]
         },
         "web": {
             "favicon": "./assets/favicon.png",
