--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.0",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "5.6.2",
     "react-native-screens": "~4.6.0",
     "react-native-url-polyfill": "^2.0.0",
