--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-screens": "~4.6.0",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.21.2",
+    "react-native-worklets": "^0.7.4",
     "react-native-worklets-core": "^1.6.3"
   },
   "devDependencies": {
