feat: add medication reports, profile editing with avatar, alarm actions, and agenda improvements

--- a/app.json
+++ b/app.json
@@ -1,41 +1,42 @@
 {
-    "expo": {
-        "name": "Vitus",
-        "slug": "vitus",
-        "version": "1.0.0",
-        "orientation": "portrait",
-        "icon": "./assets/icon.png",
-        "userInterfaceStyle": "light",
-        "newArchEnabled": true,
-        "splash": {
-            "image": "./assets/splash-icon.png",
-            "resizeMode": "contain",
-            "backgroundColor": "#06815B"
-        },
-        "ios": {
-            "supportsTablet": true
-        },
-        "android": {
-            "adaptiveIcon": {
-                "foregroundImage": "./assets/adaptive-icon.png",
-                "backgroundColor": "#FFFFFF"
-            },
-            "package": "com.lucas.vitus",
-            "permissions": [
-                "CAMERA"
-            ]
-        },
-        "web": {
-            "favicon": "./assets/favicon.png",
-            "output": "single"
-        },
-        "plugins": [
-            [
-                "expo-camera",
-                {
-                    "cameraPermission": "Permitir que o Vitus use a câmera para escanear medicamentos."
-                }
-            ]
-        ]
-    }
+  "expo": {
+    "name": "Vitus",
+    "slug": "vitus",
+    "version": "1.0.0",
+    "orientation": "portrait",
+    "icon": "./assets/icon.png",
+    "userInterfaceStyle": "light",
+    "newArchEnabled": true,
+    "splash": {
+      "image": "./assets/splash-icon.png",
+      "resizeMode": "contain",
+      "backgroundColor": "#06815B"
+    },
+    "ios": {
+      "supportsTablet": true
+    },
+    "android": {
+      "adaptiveIcon": {
+        "foregroundImage": "./assets/adaptive-icon.png",
+        "backgroundColor": "#FFFFFF"
+      },
+      "package": "com.lucas.vitus",
+      "permissions": [
+        "CAMERA"
+      ]
+    },
+    "web": {
+      "favicon": "./assets/favicon.png",
+      "output": "single"
+    },
+    "plugins": [
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Permitir que o Vitus use a câmera para escanear medicamentos."
+        }
+      ],
+      "@react-native-community/datetimepicker"
+    ]
+  }
 }
