--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^14.0.3",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
@@ -25,6 +26,7 @@
     "expo-constants": "~18.0.0",
     "expo-file-system": "^19.0.21",
     "expo-font": "~14.0.0",
+    "expo-image-manipulator": "~14.0.8",
     "expo-image-picker": "~17.0.10",
     "expo-linking": "~8.0.0",
     "expo-notifications": "~0.32.0",
@@ -42,7 +44,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "^0.21.2",
     "react-native-worklets": "^0.7.4",
-    "react-native-worklets-core": "^1.6.3"
+    "react-native-worklets-core": "^1.6.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
